# GMservice

./: README.md  pyproject.toml
desctop_server/: GMservice.py  __init__.py
firmware/: build_ui.sh  platformio.ini
firmware/data/: chart.js  conf.html  conf.js  index.css  index.html  jquery.chart.js
firmware/include/: GMservice.h  leds.h  main.h  web_api.h
firmware/src/: GMservice.cpp  MS5611_SPI.cpp  MS5611_SPI.h  leds.cpp  main.cpp  web_api.cpp
ui/: chart.js  conf.css  conf.html  conf.js  index.css  index.html
